@@ -11,18 +11,23 @@
   </parent>
   <groupId>kimoror.messangeradapter</groupId>
   <artifactId>backend</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>backend</name>
   <description>backend</description>
   <properties>
     <java.version>17</java.version>
+    <lombok.version>1.18.24</lombok.version>
+    <spring-jpa.version>2.7.8</spring-jpa.version>
+    <spring-kafka.version>2.9.3</spring-kafka.version>
+    <mapstruct.version>1.5.3.Final</mapstruct.version>
+    <postgresql.version>42.5.1</postgresql.version>
+    <spring.version>2.7.11</spring.version>
+    <h2.version>2.1.214</h2.version>
+    <testcontainer-postgres.version>1.18.0</testcontainer-postgres.version>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
 
+    <!--Spring-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
@@ -30,44 +35,63 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
+      <artifactId>spring-boot-starter-web</artifactId>
+<!--      <version>${spring.version}</version>-->
     </dependency>
-<!--    		<dependency>-->
-<!--    			<groupId>org.hibernate.orm</groupId>-->
-<!--    			<artifactId>hibernate-core</artifactId>-->
-<!--    			<version>6.1.6.Final</version>-->
-<!--    		</dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.hibernate.javax.persistence</groupId>-->
-<!--      <artifactId>hibernate-jpa-2.1-api</artifactId>-->
-<!--      <version>1.0.2.Final</version>-->
-<!--    </dependency>-->
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.24</version>
-      <scope>provided</scope>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+<!--      <version>${spring.version}</version>-->
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>${spring-kafka.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>2.7.8</version>
+      <version>${spring-jpa.version}</version>
+    </dependency>
+
+    <!--Test-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!--Tools-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
-      <version>1.5.3.Final</version>
+      <version>${mapstruct.version}</version>
     </dependency>
+
+    <!--Postgresql-->
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
-      <version>42.5.1</version>
+      <version>${postgresql.version}</version>
+    </dependency>
+    <!--Test-->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${h2.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -78,8 +102,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>17</source>
+          <target>17</target>
           <annotationProcessorPaths>
             <path>
               <groupId>org.projectlombok</groupId>
@@ -92,6 +116,7 @@
               <version>1.5.3.Final</version>
             </path>
           </annotationProcessorPaths>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
